# frigate-event-buffer

./: .dockerignore  .gitignore  AUDIT_REPORT.md  BUILD_NVENC.md  COMPOSE_ENTRYPOINT.md  DIAGNOSTIC_SIDECAR_TIMELINE_COMPILATION.md  Dockerfile  Dockerfile.intel  Dockerfile.rocm  GPU_ZEROCOPY_VENDOR_SCORECARD.md  Home Assistant Notification Automation.yaml  Home Assistant Notification Dashboard.yaml  INSTALL.md  MAP.md  MOBILE_API_CONTRACT.md  MULTI_CAM_PLAN.md  PHASE1_REFACTOR_CATALOG.md  PROMPTS.md  README.md  RULE.md  To Do.txt  USER_GUIDE.md  app.py  config.example.yaml  config.yaml.example  docker-compose.example.yaml  docker-compose.intel.example.yml  docker-compose.rocm.example.yml  docker-compose.yml  entrypoint.sh  gpu_pipeline_audit_report.md  pyproject.toml  requirements-intel.txt  requirements-rocm.txt  requirements.txt  run_server.py  test_out.txt  version.txt
.agents/rules/: map.md
.cursor/plans/: carport_reader_bw_no_person.plan.md  fix_carport_and_person_tracking.plan.md
.cursor/rules/: Contextual-Weight.mdc  map-md.mdc  pyproject-toml.mdc  tests.mdc  update-map-md.mdc
.github/workflows/: amd_rocm_smoke.yml  ci.yml  intel_arc_smoke.yml  rocm_docker_build.yml
docs/: BUFFER_FOLDER_STRUCTURE.md  INSTALL.md  MOBILE_API_CONTRACT.md  MULTI_CAM_PLAN.md  MULTI_CAM_PLAN_V2.md  RUN_ON_WINDOWS.md  VIDEO_COMPILATION_PLAN.md
docs/Multi_GPU_Support_Integration_Plan/: README.md  amd-rocm-hardware-smoke.md  gpu-00-primary-multi-vendor-gpu-plan.md  gpu-01-nvidia-refactor-and-prep.md  gpu-02-intel-arc.md  gpu-03-amd-rocm.md  gpu-04-cpu-only-path.md  intel-arc-hardware-smoke.md
docs/maps/: AI.md  INGESTION.md  LIFECYCLE.md  NOTIFICATIONS.md  PROCESSING.md  TESTING.md  WEB.md
examples/: config.example.yaml
examples/home-assistant/: Home Assistant Notification Automation.yaml
frigate_buffer/: __init__.py  config.py  models.py  orchestrator.py
frigate_buffer/managers/: __init__.py  consolidation.py  file.py  reviews.py  state.py  zone_filter.py
frigate_buffer/services/: __init__.py  ai_analyzer.py  daily_reporter.py  download.py  frigate_export_watchdog.py  lifecycle.py  mqtt_client.py  multi_cam_frame_extracter.py  notifier.py  query.py  video.py
frigate_buffer/templates/: player.html  stats.html  timeline.html
frigate_buffer/web/: server.py
multi_cam_frame_extract_mock/: PLAN_TO_MERGE_LATER.md  README.md  daily_report_to_proxy.py  multi_cam_frame_extracter.py  multi_cam_frame_extractor_input_output.md  report_prompt.txt
native/amd_decode/: CMakeLists.txt  README.md
native/amd_decode/src/: bindings.cpp  nv12_to_rgb_hip.hip  nv12_to_rgb_hip.hpp  session.cpp  session.hpp
native/intel_decode/: CMakeLists.txt  README.md
native/intel_decode/src/: bindings.cpp  session.cpp  session.hpp  xpu_zerocopy.cpp  xpu_zerocopy.hpp
scripts/: README.md  backup-appdata-config.sh  bench_post_download_pre_api.py  build-ffmpeg-nvenc.sh  build_amd_decode.sh  build_intel_decode.sh  docker_entrypoint_intel.sh  docker_entrypoint_rocm.sh  dump_merged_config_snapshot.py  load-unraid-ssh-key.ps1  multi_cam_recap.py  run_amd_rocm_docker_smoke.sh  run_intel_arc_docker_smoke.sh  scripts_readme.md  setup-unraid-ssh-agent.ps1  smoke_amd_rocm_torch.py  smoke_intel_gpu_path.py  unraid-docker.ps1  verify_gemini_proxy.py
src/: Dockerfile  config.example.yaml  requirements.txt
src/frigate_buffer/: config.py  constants.py  logging_utils.py  main.py  models.py  orchestrator.py  version.txt  wsgi.py
src/frigate_buffer/config_schema/: __init__.py  cameras.py  gemini_block.py  gemini_proxy.py  ha.py  multi_cam.py  network.py  notifications.py  settings.py
src/frigate_buffer/event_test/: __init__.py  event_test_orchestrator.py
src/frigate_buffer/managers/: __init__.py  consolidation.py  file.py  preferences.py  reviews.py  snooze.py  state.py  zone_filter.py
src/frigate_buffer/services/: __init__.py  ai_analyzer.py  ai_analyzer_system_prompt.txt  compilation_math.py  crop_utils.py  daily_reporter.py  download.py  frigate_export_watchdog.py  gemini_proxy_client.py  gpu_decoder.py  ha_storage_stats.py  lifecycle.py  mqtt_client.py  mqtt_handler.py  multi_clip_extractor.py  notifier.py  query.py  quick_title_prompt.txt  quick_title_service.py  report_prompt.txt  timeline.py  timeline_ema.py  video.py  video_compilation.py  video_sanitizer.py
src/frigate_buffer/web/: __init__.py  frigate_proxy.py  path_helpers.py  report_helpers.py  server.py
templates/: player.html  timeline.html
tests/: bench_post_download_pre_api.py  conftest.py  reproduce_issue.py  test_ai_analyzer.py  test_ai_analyzer_integration.py  test_ai_analyzer_proxy_fix.py  test_ai_frame_analysis_writing.py  test_amd_decode_spike.py  test_amd_decoder.py  test_amd_ffmpeg.py  test_bootstrap_firebase.py  test_cleanup_test_folders.py  test_compilation_argv_common.py  test_config_schema.py  test_consolidation.py  test_constants.py  test_crop_utils.py  test_daily_reporter.py  test_download_service.py  test_event_test.py  test_file_manager.py  test_file_manager_enhancement.py  test_file_manager_path_validation.py  test_frigate_export_watchdog.py  test_frigate_proxy.py  test_gif_common.py  test_gpu_backends_registry.py  test_gpu_decoder.py  test_ha_storage_stats.py  test_integration_step_5_6.py  test_intel_decode_spike.py  test_intel_decoder.py  test_intel_ffmpeg.py  test_lifecycle_service.py  test_logging_utils.py  test_main_version.py  test_max_event_length.py  test_mqtt_auth.py  test_mqtt_handler.py  test_multi_cam_recap_config.py  (+26 more)
tests/_sidecar_fixture/2602258757776/: detection.json
tests/config_schema/: conftest.py  test_config_dump_regression.py  test_config_schema_core.py  test_config_schema_gpu.py  test_config_schema_multi_cam.py  test_config_schema_notifications_providers.py
tests/helpers/: __init__.py  video_compilation.py
tests/video_compilation/: conftest.py  test_encode_compile_gpu.py  test_generate_compilation_video.py  test_timeline_crop_math.py
wheels/: Create_NeLux_Wheel.md  Dockerfile.nelux  NeLux_troubleshooting.md  Update_NeLux_Wheel.md  libspdlog.so.1.14  nelux-0.8.9-cp312-cp312-linux_x86_64.whl
(+59 files in other folders)
