[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frigate-event-buffer"
version = "0.1.0"
description = "Frigate Event Buffer - state-aware orchestrator for MQTT events, notifications, and retention"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "paho-mqtt>=2.0.0",
    "requests",
    "schedule",
    "pyyaml",
    "voluptuous",
    "opencv-python-headless",
    "ultralytics>=8.0.0",
    "torch",
    "torchvision",
    "PyNvVideoCodec",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",      # New: for coverage
    "pytest-asyncio",  # New: if you test async code
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"frigate_buffer" = ["web/templates/*", "web/static/*", "version.txt", "services/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"  # <-- Add this line
asyncio_default_fixture_loop_scope = "function" # <-- Prevents loop scope warnings in newer versions

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]
exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "PT"]

# E501 (line-too-long): fix gradually; remove a file from this list when done
# E402 (import not at top): ignore in tests only; src is checked
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"] # Added tests
extraPaths = ["src"]


